--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.18.0",
     "@uiw/react-markdown-preview": "^5.1.5",
     "@uiw/react-md-editor": "^4.0.8",
+    "cuid": "^3.0.0",
     "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "i18next": "^25.6.0",
